--- a/Rich_M_RealityShow/bin/.gitignore
+++ b/Rich_M_RealityShow/bin/.gitignore
@@ -1,13 +1,7 @@
+/contestantList.txt
 /ContestantInformation.class
 /InvalidInputException.class
 /Label.class
+/Provinces.class
 /Search.class
 /contestantMain.class
-/skillTestingQuestion.class
-/skillTestingQurstion.class
-/adminPassword
-/adminPassword2
-/contestantlist
-/contestantList
-/adminPassword.txt
-/contestantList.txt
